--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <img src="img/web.png" alt="Corner Image" class="corner-image">
     <!-- buatkan footer copyright serta berikan Style --></section>
     <footer class="text-white text-center pb-5" style=" text-align: center; background-color: #ffffff;">
-        <p>&copy;copyright 2024 by  <a href="https://www.instagram.com/zanevakalonika/" class="text-white fw-bold">Damar Galih</a></p>
+        <p>&copy;copyright 2024 by  <a href="https://github.com/D4marp" class="text-white fw-bold">Damar Galih</a></p>
     </footer>
 </div>
 </body>
